force-app/main/default/objects/My_Phono_Stage__c/My_Phono_Stage__c.object-meta.xml
<CustomObject>
    <label>My Phono Stage</label>
    <nameField>
        <label>My Phono Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Phono Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>