force-app/main/default/objects/My_Phono_Stage__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>MSRP</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>